--- a/playground/zydeco-poet/zydeco.poet.css
+++ b/playground/zydeco-poet/zydeco.poet.css
@@ -576,8 +576,10 @@ body {
 
 @media (max-width: 768px) {
 	.poem-actions {
-		bottom: 1.5rem;
+		bottom: calc(2rem + env(safe-area-inset-bottom));
 		right: 1.5rem;
+		position: fixed;
+		z-index: 10;
 	}
 
 	.action-btn {
