--- a/playground/zydeco-poet/zydeco.poet.css
+++ b/playground/zydeco-poet/zydeco.poet.css
@@ -393,7 +393,7 @@ body {
 }
 
 .poem-card {
-	min-height: 100vh;
+	min-height: 100dvh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
